--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,7 @@
     @Typography
 -----------------*/
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Poppins:400,500,600,700");
+@import url('https://fonts.googleapis.com/css2?family=Manjari&display=swap');
 /*====================
 ** Normalize
 ====================*/
@@ -108,6 +109,11 @@ h3 {
 h4 {
   font-size: 22px;
   line-height: 1.2380952380952381; }
+
+h5 {
+    font-family: 'Manjari', sans-serif;
+    font-size: 16px;
+    line-height: 1.625; }
 
 h1,
 h2,
